Bug fix: Fix Bug with unwanted whitespace to right of screen and tidy media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,17 @@
 }
 
 body{
+    max-width: 100vw;
     font-family: 'Montserrat', sans-serif;
     color: #555555;
     background-color: var(--bg);
     font-size: 16px;
     margin: 0;
     padding: 0;
+}
+
+.section{
+    width: 100vw;
 }
 
 .secheading{
@@ -23,6 +28,10 @@ body{
 .clear{
     clear: both;
     position: relative;
+}
+
+.row{
+    max-width: 100vw;
 }
 
 /*------- Colors -------*/
@@ -43,7 +52,7 @@ body{
     color: var(--logo);
 }
 
-@media (max-width: 450px){
+@media screen and (max-width: 450px){
     .navbar-brand{
     font-family: 'Bebas Neue', cursive;
     font-weight: 600;
@@ -86,13 +95,13 @@ blockquote hr{
     margin: 0 auto;
 }
 
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
     .welcome{
         font-size: 100%;
     }
 }
 
-@media (max-width: 450px){
+@media screen and (max-width: 450px){
     .welcome{
         display: none;
     }
@@ -102,16 +111,17 @@ blockquote hr{
 .menutab{
     Text-align: center;
     position: relative;
+    width: 100vw;
 }
 
 .menutab img{
-    width: 100%;
+    width: 100vw;
     height: auto;
     padding: 0;
     margin: 0;
 }
 
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
     .menutab img{
         width: 100vw;
         height: 40vh;
@@ -137,7 +147,7 @@ blockquote hr{
     background-color: rgba(51, 51, 51, 0.1)
 }
 
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
     .curtain{
         width: 100vw;
         height: 40vh;
@@ -168,15 +178,12 @@ blockquote hr{
     margin: 0;
 }
 
-.catsec{
-    padding: 0;
-    margin: 5% 0;
-}
-
 .catcol{
     position: relative;
-    width: 100%;
+    width: 50vw;
     border: 1px solid var(--light);
+    padding: 0;
+    margin: 0;
 }
 
 .catsec img{
@@ -210,6 +217,12 @@ blockquote hr{
     margin: 0 auto;
     padding: 0;
     color: var(--light);
+}
+
+@media screen and (max-width: 568px){
+    .cathead{
+        font-size: 90%;
+    }
 }
 
 .ctablu{
@@ -320,7 +333,7 @@ blockquote hr{
 }
 
 
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
      .footercustom li{
         font-size: 80%;
     }
@@ -341,7 +354,7 @@ blockquote hr{
     content: "+ ";
 }
 
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
     .footerlist li{ 
         line-height: 1.5;
         
@@ -400,7 +413,7 @@ blockquote hr{
     color: #22e5f3;
 }
 
-@media (max-width: 768px){
+@media screen and (max-width: 768px){
     .socialicons i{
     Font-size: 200%;
     margin-bottom: 10%;
